<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:id="@+id/textView40"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/datos_reservacion"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="12dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Código:"
                android:textColor="#000000"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/codigoReserve"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:background="#D3C2C2"
                android:backgroundTint="#F4EBEB"
                android:padding="5dp"
                android:text="TextView" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="12dp" />

            <TextView
                android:id="@+id/fechaitextv3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/fecha_de_inicio"
                android:textColor="#000000"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/fechaInicialReserve"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:background="#D3C2C2"
                android:backgroundTint="#F4EBEB"
                android:padding="5dp"
                android:text="TextView" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="12dp" />

            <TextView
                android:id="@+id/fechaftextv4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/fecha_de_fin"
                android:textColor="#000000"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/fechaFinalReserve"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:background="#D3C2C2"
                android:backgroundTint="#F4EBEB"
                android:padding="5dp"
                android:text="TextView" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>